2004-05-15  Cramblitt <garycramblitt@comcast.net>
        * Lots of changes:
        *   Defined the KDE Text-to-speech API.  See /libktts/kspeech.h.
        *   Moved all the GUI stuff out of KTTSD into kttsmgr.  KTTSD is a pure non-GUI deamon now.
        *   Added text job manager as a KPart (kttsjobmgr) for GUI interface.
        *   Replaced existing configuration manager (kcmkttsd) with kcmkttsmgr, which includes kttsjobmgr.
        *   Fixed several typos and minor bugs.
        *   Fixed Kate and KHTML Plugins.
        *   Updated README, TODO and this file.
        *
        * IMPORTANT note to developers using KTTSD:  The startText, stopText, resumeText DCOP
        *   methods now take a jobNum argument, which you can code as 0 to operate against the last text
        *   job your app queued.  See /plugins/kate-plugin/katekttsd.cpp for example, or /libktts/kspeech.h.
        
2002-11-21  Pupeno  <pupeno@pupeno.com>

	* Full port to the new architecture finished. Some fine tunning still needed.

2002-09-25  Pupeno  <pupeno@pupeno.com>

	* Festival Cliente/Server plug in added. Festival plug in was added initially in the project. FreeTTS never was meant to work yet.

2002-07-28  Pupeno  <pupeno@pupeno.com>

	* ChangeLog created.