@@ -36,8 +36,6 @@
 * @author Gary Cramblitt <garycramblitt@comcast.net>
 */
 
-class SpeakerTerminator;
-
 class KTTSD : public QObject, virtual public kspeech
 {
     Q_OBJECT
@@ -448,7 +446,12 @@ class KTTSD : public QObject, virtual public kspeech
     
     private:
         /*
-         * Initialize the speaker.
+        * Create and initialize the SpeechData object.
+        */
+        bool initializeSpeechData();
+        
+        /*
+         * Create and initialize the speaker.
          */
         bool initializeSpeaker();
 
@@ -472,30 +475,6 @@ class KTTSD : public QObject, virtual public kspeech
         * Object that will run in another thread to terminate the speaker.
         */
         SpeakerTerminator *speakerTerminator;
-};
-
-/**
-* SpeakerTerminator 
-*
-* A separate thread to request that the speaker thread exit, and when it does, emits a signal.
-* We need to do this in a separate thread because the main thread cannot call speaker->wait(),
-* otherwise it would block the QT event loop and hang the program.
-*/
-class SpeakerTerminator: public QObject, public QThread 
-{
-    Q_OBJECT
-
-    public:
-        SpeakerTerminator(Speaker *speaker, QObject *parent = 0, const char *name = 0);
-    
-    signals:
-        void speakerFinished();
-    
-    protected:   
-        virtual void run();
-    
-    private:
-        Speaker* speaker;
 };
 
 #endif // _KTTSD_H_
