@@ -1,3 +1,10 @@
+2004-05-18  Cramblitt <garycramblitt@comcast.net>
+        * Reinit() without losing existing queued text jobs, messages, or warnings.
+        * When kttsd restarts because of reinit(), job manager part refreshes list.
+
+2004-05-17  Cramblitt <garycramblitt@comcast.net>
+        * Fix hang when calling reinit() while speaking.
+                        
 2004-05-15  Cramblitt <garycramblitt@comcast.net>
         * Lots of changes:
         *   Defined the KDE Text-to-speech API.  See /libktts/kspeech.h.
